Use lombock AllArgsConstructor and replace Collections with List.of and Map.of